Bug 966039 - Test more parts of app actor via mochitest. r=ochameau
UltraBlame original commit: 36115ac1e33306d8998006cc1fa783406d732c27

--- a/toolkit/devtools/apps/tests/test_webapps_actor.html
+++ b/toolkit/devtools/apps/tests/test_webapps_actor.html
@@ -393,6 +393,76 @@ var
 installTestApp
 mm
 ;
+const
+PACKAGED_APP_ID
+=
+"
+test
+-
+app
+-
+id
+"
+;
+const
+PACKAGED_APP_ORIGIN
+=
+"
+app
+:
+/
+/
+"
++
+PACKAGED_APP_ID
+;
+const
+PACKAGED_APP_MANIFEST
+=
+PACKAGED_APP_ORIGIN
++
+"
+/
+manifest
+.
+webapp
+"
+;
+const
+CERTIFIED_APP_ID
+=
+"
+test
+-
+certified
+-
+id
+"
+;
+const
+CERTIFIED_APP_ORIGIN
+=
+"
+app
+:
+/
+/
+"
++
+CERTIFIED_APP_ID
+;
+const
+CERTIFIED_APP_MANIFEST
+=
+CERTIFIED_APP_ORIGIN
++
+"
+/
+manifest
+.
+webapp
+"
+;
 var
 steps
 =
@@ -401,13 +471,14 @@ function
 (
 )
 {
-ok
+info
 (
-true
 "
-Start
-setting
-up
+=
+=
+SETUP
+=
+=
 "
 )
 ;
@@ -856,9 +927,8 @@ function
 (
 )
 {
-ok
+info
 (
-true
 "
 =
 =
@@ -870,17 +940,6 @@ packaged
 app
 "
 )
-;
-let
-appId
-=
-"
-test
--
-app
--
-id
-"
 ;
 let
 url
@@ -901,7 +960,7 @@ zip
 installTestApp
 (
 url
-appId
+PACKAGED_APP_ID
 function
 (
 aResponse
@@ -921,7 +980,7 @@ is
 aResponse
 .
 appId
-appId
+PACKAGED_APP_ID
 "
 Got
 same
@@ -1027,9 +1086,8 @@ function
 (
 )
 {
-ok
+info
 (
-true
 "
 =
 =
@@ -1041,17 +1099,6 @@ packaged
 app
 "
 )
-;
-let
-appId
-=
-"
-test
--
-app
--
-id
-"
 ;
 let
 url
@@ -1074,7 +1121,7 @@ zip
 installTestApp
 (
 url
-appId
+PACKAGED_APP_ID
 function
 (
 aResponse
@@ -1094,7 +1141,7 @@ is
 aResponse
 .
 appId
-appId
+PACKAGED_APP_ID
 "
 Got
 same
@@ -1203,9 +1250,8 @@ function
 (
 )
 {
-ok
+info
 (
-true
 "
 =
 =
@@ -1217,17 +1263,6 @@ certified
 app
 "
 )
-;
-let
-appId
-=
-"
-test
--
-certified
--
-id
-"
 ;
 let
 url
@@ -1250,7 +1285,7 @@ zip
 installTestApp
 (
 url
-appId
+CERTIFIED_APP_ID
 function
 (
 aResponse
@@ -1270,7 +1305,7 @@ is
 aResponse
 .
 appId
-appId
+CERTIFIED_APP_ID
 "
 Got
 same
@@ -1376,6 +1411,318 @@ function
 (
 )
 {
+info
+(
+"
+=
+=
+TEST
+=
+=
+Get
+all
+apps
+"
+)
+;
+getAll
+(
+false
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Get
+packaged
+app
+"
+)
+;
+getApp
+(
+{
+id
+:
+PACKAGED_APP_ID
+manifestURL
+:
+PACKAGED_APP_MANIFEST
+}
+true
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Get
+certified
+app
+"
+)
+;
+getApp
+(
+{
+id
+:
+CERTIFIED_APP_ID
+manifestURL
+:
+CERTIFIED_APP_MANIFEST
+}
+false
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+SETUP
+=
+=
+Enable
+certified
+app
+access
+"
+)
+;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+devtools
+.
+debugger
+.
+forbid
+-
+certified
+-
+apps
+"
+false
+]
+]
+}
+next
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Get
+all
+apps
+(
+CERTIFIED
+ENABLED
+)
+"
+)
+;
+getAll
+(
+true
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Get
+packaged
+app
+(
+CERTIFIED
+ENABLED
+)
+"
+)
+;
+getApp
+(
+{
+id
+:
+PACKAGED_APP_ID
+manifestURL
+:
+PACKAGED_APP_MANIFEST
+}
+true
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Get
+certified
+app
+(
+CERTIFIED
+ENABLED
+)
+"
+)
+;
+getApp
+(
+{
+id
+:
+CERTIFIED_APP_ID
+manifestURL
+:
+CERTIFIED_APP_MANIFEST
+}
+true
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+SETUP
+=
+=
+Disable
+certified
+app
+access
+"
+)
+;
+SpecialPowers
+.
+popPrefEnv
+(
+next
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Uninstall
+packaged
+app
+"
+)
+;
+uninstall
+(
+PACKAGED_APP_MANIFEST
+)
+;
+}
+function
+(
+)
+{
+info
+(
+"
+=
+=
+TEST
+=
+=
+Uninstall
+certified
+app
+"
+)
+;
+uninstall
+(
+CERTIFIED_APP_MANIFEST
+)
+;
+}
+function
+(
+)
+{
 ok
 (
 true
@@ -1399,7 +1746,7 @@ cleanup
 ;
 SpecialPowers
 .
-popPrefEnv
+flushPrefEnv
 (
 finish
 )
@@ -1412,6 +1759,379 @@ addLoadEvent
 start
 )
 ;
+function
+getAll
+(
+expectCertified
+)
+{
+mm
+.
+addMessageListener
+(
+"
+appActorResponse
+"
+function
+onResponse
+(
+response
+)
+{
+mm
+.
+removeMessageListener
+(
+"
+appActorResponse
+"
+onResponse
+)
+;
+ok
+(
+"
+apps
+"
+in
+response
+"
+Apps
+found
+in
+getAll
+reply
+"
+)
+;
+let
+apps
+=
+response
+.
+apps
+;
+let
+packagedApp
+certifiedApp
+;
+for
+(
+let
+app
+of
+apps
+)
+{
+switch
+(
+app
+.
+id
+)
+{
+case
+PACKAGED_APP_ID
+:
+packagedApp
+=
+app
+;
+break
+;
+case
+CERTIFIED_APP_ID
+:
+certifiedApp
+=
+app
+;
+break
+;
+}
+}
+ok
+(
+packagedApp
+"
+Packaged
+app
+found
+via
+getAll
+"
+)
+;
+is
+(
+!
+!
+certifiedApp
+expectCertified
+"
+Certified
+app
+matches
+expectation
+"
+)
+;
+next
+(
+)
+;
+}
+)
+;
+mm
+.
+sendAsyncMessage
+(
+"
+appActorRequest
+"
+{
+type
+:
+"
+getAll
+"
+}
+)
+;
+}
+function
+getApp
+(
+appInfo
+expected
+)
+{
+mm
+.
+addMessageListener
+(
+"
+appActorResponse
+"
+function
+onResponse
+(
+response
+)
+{
+mm
+.
+removeMessageListener
+(
+"
+appActorResponse
+"
+onResponse
+)
+;
+is
+(
+"
+app
+"
+in
+response
+expected
+"
+App
+existence
+matches
+expectation
+"
+)
+;
+is
+(
+"
+error
+"
+in
+response
+!
+expected
+"
+Error
+existence
+matches
+expectation
+"
+)
+;
+if
+(
+!
+expected
+)
+{
+is
+(
+response
+.
+error
+"
+forbidden
+"
+"
+Error
+message
+is
+correct
+"
+)
+;
+next
+(
+)
+;
+return
+;
+}
+let
+app
+=
+response
+.
+app
+;
+for
+(
+let
+key
+in
+appInfo
+)
+{
+is
+(
+app
+[
+key
+]
+appInfo
+[
+key
+]
+"
+Value
+for
+"
++
+key
++
+"
+matches
+"
+)
+;
+}
+next
+(
+)
+;
+}
+)
+;
+mm
+.
+sendAsyncMessage
+(
+"
+appActorRequest
+"
+{
+type
+:
+"
+getApp
+"
+manifestURL
+:
+appInfo
+.
+manifestURL
+}
+)
+;
+}
+function
+uninstall
+(
+manifestURL
+)
+{
+mm
+.
+addMessageListener
+(
+"
+appActorResponse
+"
+function
+onResponse
+(
+response
+)
+{
+mm
+.
+removeMessageListener
+(
+"
+appActorResponse
+"
+onResponse
+)
+;
+ok
+(
+!
+(
+"
+error
+"
+in
+response
+)
+"
+App
+uninstalled
+successfully
+"
+)
+;
+next
+(
+)
+;
+}
+)
+;
+mm
+.
+sendAsyncMessage
+(
+"
+appActorRequest
+"
+{
+type
+:
+"
+uninstall
+"
+manifestURL
+:
+manifestURL
+}
+)
+;
+}
 <
 /
 script
