Bug 968374 - Fix conformance test to match spec for WEBGL_debug_shaders. r=bjacob
UltraBlame original commit: c93990b12047da46b492d13395c9152200e9727e

--- a/content/canvas/test/webgl/conformance/extensions/webgl-debug-shaders.html
+++ b/content/canvas/test/webgl/conformance/extensions/webgl-debug-shaders.html
@@ -570,7 +570,7 @@ an
 empty
 string
 .
-shouldBeNull
+shouldBe
 (
 "
 ext
@@ -580,6 +580,10 @@ getTranslatedShaderSource
 shader
 )
 "
+'
+"
+"
+'
 )
 ;
 gl
@@ -590,7 +594,7 @@ shader
 source
 )
 ;
-shouldBeNull
+shouldBe
 (
 "
 ext
@@ -600,6 +604,10 @@ getTranslatedShaderSource
 shader
 )
 "
+'
+"
+"
+'
 )
 ;
 gl
