Bug 915824 - Move CSP tests from content/base/test into content/base/test/csp directory. r=geekboy
UltraBlame original commit: 0a3fa6d853a6aac683df989effed37a46f465b55

--- a/content/base/test/csp/test_301_redirect.html
+++ b/content/base/test/csp/test_301_redirect.html
@@ -537,7 +537,7 @@ ok
 result
 "
 a
-303
+301
 redirect
 when
 posting
@@ -604,11 +604,11 @@ content_iframe
 src
 =
 '
-file_bug650386_content
+file_redirect_content
 .
 sjs
 ?
-303
+301
 '
 ;
 <
