--- a/content/base/test/csp/test_policyuri_async_fetch.html
+++ b/content/base/test/csp/test_policyuri_async_fetch.html
@@ -14,11 +14,8 @@ title
 >
 Test
 for
-CSP
-async
-policy
--
-uri
+Bug
+558431
 <
 /
 title
@@ -281,7 +278,7 @@ f
 src
 =
 "
-file_bug558431
+file_policyuri_async_fetch
 .
 html
 "
