--- a/content/base/test/csp/test_307_redirect.html
+++ b/content/base/test/csp/test_307_redirect.html
@@ -537,7 +537,7 @@ ok
 result
 "
 a
-301
+307
 redirect
 when
 posting
@@ -604,11 +604,11 @@ content_iframe
 src
 =
 '
-file_bug650386_content
+file_redirect_content
 .
 sjs
 ?
-301
+307
 '
 ;
 <
