--- a/content/base/test/csp/test_csp_report.html
+++ b/content/base/test/csp/test_csp_report.html
@@ -14,10 +14,8 @@ title
 >
 Test
 for
-CSP
-JSON
-violation
-report
+Bug
+548193
 <
 /
 title
@@ -611,7 +609,7 @@ var
 testFile
 =
 "
-file_bug548193
+file_csp_report
 .
 sjs
 "
@@ -670,6 +668,8 @@ content
 base
 /
 test
+/
+csp
 /
 "
 +
