Backed out changeset 0a3fa6d853a6 (bug 915824) for effectively re-enabling tests that were disabled on B2G. CLOSED TREE
UltraBlame original commit: 2e5a57e18585b91749f9501944734e5eda84e4b9

--- a/content/base/test/test_bug558431.html
+++ b/content/base/test/test_bug558431.html
@@ -14,8 +14,11 @@ title
 >
 Test
 for
-Bug
-558431
+CSP
+async
+policy
+-
+uri
 <
 /
 title
@@ -278,7 +281,7 @@ f
 src
 =
 "
-file_policyuri_async_fetch
+file_bug558431
 .
 html
 "
