--- a/content/base/test/test_bug717511.html
+++ b/content/base/test/test_bug717511.html
@@ -888,7 +888,7 @@ cspframe
 src
 =
 '
-file_multi_policy_injection_bypass
+file_bug717511
 .
 html
 '
@@ -905,7 +905,7 @@ cspframe2
 src
 =
 '
-file_multi_policy_injection_bypass_2
+file_bug717511_2
 .
 html
 '
