--- a/content/base/test/test_bug548193.html
+++ b/content/base/test/test_bug548193.html
@@ -14,8 +14,10 @@ title
 >
 Test
 for
-Bug
-548193
+CSP
+JSON
+violation
+report
 <
 /
 title
@@ -609,7 +611,7 @@ var
 testFile
 =
 "
-file_csp_report
+file_bug548193
 .
 sjs
 "
@@ -668,8 +670,6 @@ content
 base
 /
 test
-/
-csp
 /
 "
 +
