--- a/content/base/test/test_bug650386_redirect_307.html
+++ b/content/base/test/test_bug650386_redirect_307.html
@@ -537,7 +537,7 @@ ok
 result
 "
 a
-303
+307
 redirect
 when
 posting
@@ -604,11 +604,11 @@ content_iframe
 src
 =
 '
-file_redirect_content
+file_bug650386_content
 .
 sjs
 ?
-303
+307
 '
 ;
 <
