--- a/content/base/test/test_bug702439.html
+++ b/content/base/test/test_bug702439.html
@@ -15,7 +15,7 @@ title
 Test
 for
 Bug
-702439
+428847
 <
 /
 title
@@ -163,7 +163,7 @@ i
 src
 =
 "
-file_subframe_run_js_if_allowed
+file_bug702439
 .
 html
 "
