Bug 895747 - DevTools Net Panel: cannot inspect contents of some POST messages, r=rcampbell
UltraBlame original commit: 88b2c27cb819b96f00be4a367a8dcca902b86433

--- a/browser/devtools/netmonitor/test/html_post-raw-test-page.html
+++ b/browser/devtools/netmonitor/test/html_post-raw-test-page.html
@@ -87,6 +87,28 @@ true
 ;
 xhr
 .
+setRequestHeader
+(
+"
+content
+-
+type
+"
+"
+application
+/
+x
+-
+www
+-
+form
+-
+urlencoded
+"
+)
+;
+xhr
+.
 onreadystatechange
 =
 function
@@ -129,27 +151,7 @@ var
 rawData
 =
 "
-Content
--
-Type
-:
-application
-/
-x
--
-www
--
-form
--
-urlencoded
-\
-r
-\
-n
-\
-r
-\
-nfoo
+foo
 =
 bar
 &
