Bug 945323 - [Download API] Downloaded path isn't honoring download attribute. r=bz
UltraBlame original commit: 1f32afbaa4191e1c8122b514e259e5f58f75aad3

--- a/dom/downloads/tests/test_downloads_basic.html
+++ b/dom/downloads/tests/test_downloads_basic.html
@@ -302,19 +302,6 @@ tests
 "
 ;
 var
-baseDownloadPath
-=
-"
-/
-mnt
-/
-sdcard
-/
-downloads
-/
-"
-;
-var
 lastKnownCurrentBytes
 =
 0
@@ -415,15 +402,26 @@ baseServeURL
 href
 ;
 var
-expectedDownloadPath
+destinationRegEx
 =
-baseDownloadPath
-+
-"
+/
 test
+\
+(
+?
+[
+0
+-
+9
+]
+*
+\
+)
+?
+\
 .
 bin
-"
+/
 ;
 /
 /
@@ -438,22 +436,40 @@ t
 honoring
 download
 attribute
-todo
+ok
+(
+destinationRegEx
+.
+test
 (
 download
 .
 path
-=
-=
-=
-expectedDownloadPath
+)
 "
 Download
 path
-=
+'
 "
 +
-expectedDownloadPath
+download
+.
+path
++
+"
+'
+should
+match
+'
+"
++
+destinationRegEx
++
+"
+'
+regexp
+.
+"
 )
 ;
 ok
