Bug 969247 part.1 Remove or replace DOM_VK_ENTER and NS_VK_ENTER users r=smaug
UltraBlame original commit: e947cee33a9206310dc5ea57492a2f3fac4807ab

--- a/editor/libeditor/text/tests/test_bug590554.html
+++ b/editor/libeditor/text/tests/test_bug590554.html
@@ -162,7 +162,7 @@ focus
 synthesizeKey
 (
 "
-VK_ENTER
+VK_RETURN
 "
 {
 }
@@ -191,7 +191,7 @@ time
 synthesizeKey
 (
 "
-VK_ENTER
+VK_RETURN
 "
 {
 }
