Bug 968003 - Return null for frameElement with a cross-origin parent. r=bz
UltraBlame original commit: da8ce1721f25beaee842856e3d33253fa93d6fb2

--- a/js/xpconnect/tests/mochitest/test_bug829872.html
+++ b/js/xpconnect/tests/mochitest/test_bug829872.html
@@ -101,6 +101,9 @@ Test
 for
 Bug
 829872
+and
+Bug
+968003
 *
 *
 /
@@ -135,6 +138,97 @@ go
 ;
 }
 function
+check
+(
+elem
+desc
+)
+{
+is
+(
+elem
+.
+contentDocument
+null
+"
+null
+cross
+-
+origin
+contentDocument
+for
+"
++
+desc
+)
+;
+ok
+(
+SpecialPowers
+.
+wrap
+(
+elem
+)
+.
+contentWindow
+.
+eval
+(
+'
+frameElement
+=
+=
+=
+null
+;
+'
+)
+"
+null
+cross
+-
+origin
+frameElement
+for
+"
++
+desc
+)
+;
+if
+(
+!
+(
+elem
+instanceof
+HTMLFrameElement
+)
+)
+is
+(
+elem
+.
+getSVGDocument
+(
+)
+null
+"
+null
+cross
+-
+origin
+getSVGDocument
+(
+)
+for
+"
++
+desc
+)
+;
+}
+function
 go
 (
 )
@@ -148,74 +242,33 @@ test
 "
 )
 ;
-is
+check
 (
 (
 '
 ifr
 '
 )
-.
-contentDocument
-null
 "
-null
-cross
--
-origin
-contentDocument
-for
 iframe
+element
 "
 )
 ;
-is
+check
 (
 (
 '
 obj
 '
 )
-.
-contentDocument
-null
 "
-null
-cross
--
-origin
-contentDocument
-for
-obj
+object
+element
 "
 )
 ;
-is
-(
-(
-'
-obj
-'
-)
-.
-getSVGDocument
-(
-)
-null
-"
-null
-cross
--
-origin
-getSVGDocument
-(
-)
-for
-obj
-"
-)
-;
-is
+check
 (
 (
 '
@@ -231,16 +284,8 @@ getElementById
 fr
 '
 )
-.
-contentDocument
-null
 "
-null
-cross
--
-origin
-contentDocument
-for
+frameset
 frame
 "
 )
