Bug 967429 - Disable the UI initiated steping behavior for <input type=number> if the value the user typed in is not valid, and instead highlight the field as being invalid. r=smaug
UltraBlame original commit: 1a0927d0558bdacda2274212065683ea2d8e1d0c

--- a/content/html/content/test/forms/test_input_number_key_events.html
+++ b/content/html/content/test/forms/test_input_number_key_events.html
@@ -1051,7 +1051,8 @@ elem
 .
 value
 =
-0
+-
+1
 ;
 expectedVal
 =
@@ -1087,9 +1088,10 @@ control
 with
 value
 set
-to
-the
-midpoint
+between
+min
+/
+max
 (
 "
 +
@@ -1534,6 +1536,70 @@ oldStep
 /
 /
 restore
+/
+/
+Test
+that
+invalid
+input
+blocks
+UI
+initiated
+stepping
+:
+oldVal
+=
+elem
+.
+value
+=
+"
+"
+;
+elem
+.
+select
+(
+)
+;
+sendString
+(
+"
+abc
+"
+)
+;
+synthesizeKey
+(
+key
+{
+}
+)
+;
+is
+(
+elem
+.
+value
+"
+"
+"
+Test
+"
++
+key
++
+"
+does
+nothing
+when
+the
+input
+is
+invalid
+"
+)
+;
 }
 }
 <
