Bug 873661 - Wait both browserloadend and process-created event. r=fabrice
UltraBlame original commit: de767cef4a63ba2f9f9d4a1ea0e4b3a827a32fb5

--- a/dom/browser-element/mochitest/priority/test_NestedFrames.html
+++ b/dom/browser-element/mochitest/priority/test_NestedFrames.html
@@ -417,6 +417,11 @@ childID
 =
 null
 ;
+Promise
+.
+all
+(
+[
 expectOnlyOneProcessCreated
 (
 )
@@ -425,25 +430,23 @@ then
 (
 function
 (
-chid
+child
 )
 {
 childID
 =
-chid
+child
 ;
 return
-Promise
-.
-all
-(
-[
 expectPriorityChange
 (
 childID
 '
 FOREGROUND
 '
+)
+;
+}
 )
 expectMozbrowserEvent
 (
@@ -453,9 +456,6 @@ loadend
 '
 )
 ]
-)
-;
-}
 )
 .
 then
