--- a/b2g/chrome/content/shell.html
+++ b/b2g/chrome/content/shell.html
@@ -44,46 +44,37 @@ fullscreen
 "
 #
 endif
-style
+>
+<
+head
+>
+<
+link
+rel
 =
 "
-background
-:
-black
-;
-overflow
-:
-hidden
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-padding
-:
-0px
-!
-important
+stylesheet
 "
-onunload
+href
 =
 "
 shell
 .
-stop
-(
-)
-;
+css
 "
->
-<
-head
+type
+=
+"
+text
+/
+css
+"
+media
+=
+"
+all
+"
+/
 >
 <
 script
@@ -275,24 +266,6 @@ id
 =
 "
 container
-"
-style
-=
-"
-margin
-:
-0px
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
 "
 >
 #
