Bug 973988 - DOM Promise constructor should call the executor with "undefined" as thisArg. r=bz
UltraBlame original commit: 5c6b2dcd79eba94bab375aa5071671fded2e62e6

--- a/dom/promise/tests/test_promise.html
+++ b/dom/promise/tests/test_promise.html
@@ -3751,6 +3751,52 @@ runTest
 ;
 }
 function
+promiseStrictExecutorThisArg
+(
+)
+{
+var
+promise
+=
+new
+Promise
+(
+function
+(
+resolve
+reject
+)
+{
+"
+use
+strict
+"
+;
+ok
+(
+this
+=
+=
+=
+undefined
+"
+thisArg
+should
+be
+undefined
+.
+"
+)
+;
+runTest
+(
+)
+;
+}
+)
+;
+}
+function
 promiseResolveArray
 (
 )
@@ -4097,6 +4143,7 @@ promiseThenableThrowsAfterCallback
 promiseThenableRejectThenResolve
 promiseWithThenReplaced
 promiseStrictHandlers
+promiseStrictExecutorThisArg
 promiseResolveArray
 promiseResolveThenable
 promiseResolvePromise
