--- a/dom/browser-element/mochitest/test_browserElement_NoPref.html
+++ b/dom/browser-element/mochitest/test_browserElement_NoPref.html
@@ -280,20 +280,9 @@ emptyPage1
 addEventListener
 (
 '
-load
+testready
 '
-function
-(
-)
-{
-SimpleTest
-.
-executeSoon
-(
 runTest
-)
-;
-}
 )
 ;
 <
