--- a/dom/browser-element/mochitest/test_browserElement_NoWhitelist.html
+++ b/dom/browser-element/mochitest/test_browserElement_NoWhitelist.html
@@ -295,20 +295,9 @@ emptyPage1
 addEventListener
 (
 '
-load
+testready
 '
-function
-(
-)
-{
-SimpleTest
-.
-executeSoon
-(
 runTest
-)
-;
-}
 )
 ;
 <
