Bug 966624 - Refactor Tex Image checks. r=jgilbert
UltraBlame original commit: 063362390b6e4010d6a418edd6925ffe588d5f5f

--- a/content/canvas/test/webgl/conformance/more/functions/texImage2DBadArgs.html
+++ b/content/canvas/test/webgl/conformance/more/functions/texImage2DBadArgs.html
@@ -18,6 +18,7 @@ utf
 -
 8
 "
+/
 >
 <
 link
@@ -39,7 +40,19 @@ href
 .
 .
 /
-unit
+.
+.
+/
+.
+.
+/
+resources
+/
+js
+-
+test
+-
+style
 .
 css
 "
@@ -47,22 +60,25 @@ css
 >
 <
 script
-type
-=
-"
-application
-/
-x
--
-javascript
-"
 src
 =
 "
 .
 .
 /
-unit
+.
+.
+/
+.
+.
+/
+resources
+/
+js
+-
+test
+-
+pre
 .
 js
 "
@@ -73,22 +89,20 @@ script
 >
 <
 script
-type
-=
-"
-application
-/
-x
--
-javascript
-"
 src
 =
 "
 .
 .
 /
-util
+.
+.
+/
+resources
+/
+webgl
+-
+test
 .
 js
 "
@@ -99,24 +113,120 @@ script
 >
 <
 script
-type
+src
 =
 "
-application
+.
+.
 /
-x
+.
+.
+/
+resources
+/
+webgl
 -
-javascript
+test
+-
+utils
+.
+js
 "
 >
-Tests
-.
-startUnit
+<
+/
+script
+>
+<
+/
+head
+>
+<
+body
+>
+<
+div
+id
 =
-function
+"
+description
+"
+>
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas
+"
+width
+=
+"
+16
+"
+height
+=
+"
+16
+"
+style
+=
+"
+width
+:
+50px
+;
+height
+:
+50px
+;
+border
+:
+1px
+solid
+black
+;
+"
+>
+<
+/
+canvas
+>
+<
+div
+id
+=
+"
+console
+"
+>
+<
+/
+div
+>
+<
+script
+>
+var
+wtu
+=
+WebGLTestUtils
+;
+description
 (
+"
+Test
+bad
+arguments
+to
+texImage2D
+"
 )
-{
+;
 var
 canvas
 =
@@ -125,34 +235,22 @@ document
 getElementById
 (
 '
-gl
+canvas
 '
 )
 ;
 var
 gl
 =
-wrapGLContext
+wtu
+.
+create3DContext
 (
 canvas
-.
-getContext
-(
-GL_CONTEXT_ID
-)
 )
 ;
-return
-[
-gl
-]
-;
-}
-Tests
-.
-setup
-=
 function
+setup
 (
 gl
 )
@@ -177,15 +275,11 @@ tex
 )
 ;
 return
-[
-gl
-]
+tex
+;
 }
-Tests
-.
-teardown
-=
 function
+teardown
 (
 gl
 tex
@@ -209,15 +303,41 @@ tex
 )
 ;
 }
-Tests
-.
-testTexImage2D
-=
 function
+testrunner
+(
+gl
+expected
+desc
+fn
+)
+{
+var
+tex
+=
+setup
 (
 gl
 )
-{
+;
+fn
+(
+)
+;
+glErrorShouldBe
+(
+gl
+expected
+desc
+)
+;
+teardown
+(
+gl
+tex
+)
+;
+}
 var
 data
 =
@@ -227,7 +347,7 @@ Uint8Array
 4
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -268,7 +388,7 @@ data
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -309,7 +429,7 @@ data
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -349,7 +469,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -392,7 +512,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -460,8 +580,12 @@ details
 this
 issue
 .
-assertOk
+testrunner
 (
+gl
+gl
+.
+NO_ERROR
 "
 zero
 size
@@ -496,7 +620,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -537,7 +661,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -578,7 +702,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -618,7 +742,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -658,7 +782,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -703,7 +827,7 @@ Uint8Array
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -745,7 +869,7 @@ null
 }
 )
 ;
-assertGLError
+testrunner
 (
 gl
 gl
@@ -787,63 +911,31 @@ null
 }
 )
 ;
-}
-Tests
-.
-endUnit
-=
-function
+debug
 (
-gl
+"
+"
 )
-{
-}
+;
+var
+successfullyParsed
+=
+true
+;
 <
 /
 script
 >
 <
-style
+script
 >
-canvas
-{
-position
-:
-absolute
+finishTest
+(
+)
 ;
-}
 <
 /
-style
->
-<
-/
-head
->
-<
-body
->
-<
-canvas
-id
-=
-"
-gl
-"
-width
-=
-"
-16
-"
-height
-=
-"
-16
-"
->
-<
-/
-canvas
+script
 >
 <
 /
