Bug 926830 - Test cleanup for plugin enabledState usage, content. r=smaug
UltraBlame original commit: 97c8c8491b1738fc566d9ba559ec3bdd2ee15a12

--- a/content/base/test/test_mixed_content_blocker.html
+++ b/content/base/test/test_mixed_content_blocker.html
@@ -57,6 +57,27 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+head_plain
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -87,71 +108,8 @@ css
 <
 script
 >
-var
-ph
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-plugin
-/
-host
-;
-1
-"
-]
-.
-getService
+setTestPluginEnabledState
 (
-SpecialPowers
-.
-Ci
-.
-nsIPluginHost
-)
-;
-var
-tags
-=
-ph
-.
-getPluginTags
-(
-)
-;
-for
-(
-var
-tag
-of
-tags
-)
-{
-if
-(
-tag
-.
-name
-=
-=
-"
-Test
-Plug
--
-in
-"
-)
-{
-tag
-.
-enabledState
-=
 SpecialPowers
 .
 Ci
@@ -159,10 +117,8 @@ Ci
 nsIPluginTag
 .
 STATE_ENABLED
+)
 ;
-;
-}
-}
 var
 origBlockDisplay
 =
