--- a/content/html/content/test/test_iframe_sandbox_plugins.html
+++ b/content/html/content/test/test_iframe_sandbox_plugins.html
@@ -59,6 +59,27 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+enableTestPlugin
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
