--- a/content/base/test/chrome/test_bug391728.html
+++ b/content/base/test/chrome/test_bug391728.html
@@ -87,6 +87,27 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -901,18 +922,6 @@ resetBlocklist
 (
 )
 ;
-plugin
-.
-enabledState
-=
-Components
-.
-interfaces
-.
-nsIPluginTag
-.
-STATE_ENABLED
-;
 SimpleTest
 .
 finish
@@ -1375,10 +1384,8 @@ solid
 "
 )
 ;
-plugin
-.
-enabledState
-=
+setTestPluginEnabledState
+(
 Components
 .
 interfaces
@@ -1386,6 +1393,7 @@ interfaces
 nsIPluginTag
 .
 STATE_DISABLED
+)
 ;
 load_frame
 (
@@ -1477,10 +1485,8 @@ status
 "
 )
 ;
-plugin
-.
-enabledState
-=
+setTestPluginEnabledState
+(
 Components
 .
 interfaces
@@ -1488,6 +1494,7 @@ interfaces
 nsIPluginTag
 .
 STATE_ENABLED
+)
 ;
 setAndUpdateBlocklist
 (
@@ -1713,6 +1720,17 @@ SimpleTest
 .
 waitForExplicitFinish
 (
+)
+;
+setTestPluginEnabledState
+(
+Components
+.
+interfaces
+.
+nsIPluginTag
+.
+STATE_ENABLED
 )
 ;
 window
