--- a/content/base/test/chrome/test_bug391728.html
+++ b/content/base/test/chrome/test_bug391728.html
@@ -87,27 +87,6 @@ js
 script
 >
 <
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-head
-.
-js
-"
->
-<
-/
-script
->
-<
 link
 rel
 =
@@ -922,6 +901,18 @@ resetBlocklist
 (
 )
 ;
+plugin
+.
+enabledState
+=
+Components
+.
+interfaces
+.
+nsIPluginTag
+.
+STATE_ENABLED
+;
 SimpleTest
 .
 finish
@@ -1384,8 +1375,10 @@ solid
 "
 )
 ;
-setTestPluginEnabledState
-(
+plugin
+.
+enabledState
+=
 Components
 .
 interfaces
@@ -1393,7 +1386,6 @@ interfaces
 nsIPluginTag
 .
 STATE_DISABLED
-)
 ;
 load_frame
 (
@@ -1485,8 +1477,10 @@ status
 "
 )
 ;
-setTestPluginEnabledState
-(
+plugin
+.
+enabledState
+=
 Components
 .
 interfaces
@@ -1494,7 +1488,6 @@ interfaces
 nsIPluginTag
 .
 STATE_ENABLED
-)
 ;
 setAndUpdateBlocklist
 (
@@ -1720,17 +1713,6 @@ SimpleTest
 .
 waitForExplicitFinish
 (
-)
-;
-setTestPluginEnabledState
-(
-Components
-.
-interfaces
-.
-nsIPluginTag
-.
-STATE_ENABLED
 )
 ;
 window
