--- a/content/base/test/test_mixed_content_blocker.html
+++ b/content/base/test/test_mixed_content_blocker.html
@@ -57,27 +57,6 @@ js
 script
 >
 <
-script
-type
-=
-"
-application
-/
-javascript
-"
-src
-=
-"
-head_plain
-.
-js
-"
->
-<
-/
-script
->
-<
 link
 rel
 =
@@ -108,8 +87,71 @@ css
 <
 script
 >
-setTestPluginEnabledState
+var
+ph
+=
+SpecialPowers
+.
+Cc
+[
+"
+mozilla
+.
+org
+/
+plugin
+/
+host
+;
+1
+"
+]
+.
+getService
 (
+SpecialPowers
+.
+Ci
+.
+nsIPluginHost
+)
+;
+var
+tags
+=
+ph
+.
+getPluginTags
+(
+)
+;
+for
+(
+var
+tag
+of
+tags
+)
+{
+if
+(
+tag
+.
+name
+=
+=
+"
+Test
+Plug
+-
+in
+"
+)
+{
+tag
+.
+enabledState
+=
 SpecialPowers
 .
 Ci
@@ -117,8 +159,10 @@ Ci
 nsIPluginTag
 .
 STATE_ENABLED
-)
 ;
+;
+}
+}
 var
 origBlockDisplay
 =
