Bug 1405983 - Part 2: Modify tests for delay. r=pbro
MozReview-Commit-ID: 6ByuW2Q33Vf

UltraBlame original commit: 34563d832147afe87b369f49f555e0ccc8268aa4

--- a/devtools/client/animationinspector/test/doc_script_animation.html
+++ b/devtools/client/animationinspector/test/doc_script_animation.html
@@ -75,6 +75,22 @@ background
 blue
 ;
 }
+#
+target4
+{
+width
+:
+50px
+;
+height
+:
+50px
+;
+background
+:
+pink
+;
+}
 <
 /
 style
@@ -116,6 +132,18 @@ id
 =
 "
 target3
+"
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+target4
 "
 >
 <
@@ -284,6 +312,66 @@ both
 "
 }
 }
+{
+id
+:
+"
+target4
+"
+frames
+:
+[
+{
+transform
+:
+"
+translate
+(
+0px
+)
+"
+offset
+:
+0
+}
+{
+transform
+:
+"
+translate
+(
+100px
+)
+"
+offset
+:
+1
+}
+]
+timing
+:
+{
+duration
+:
+100
+iterations
+:
+2
+iterationStart
+:
+0
+.
+5
+delay
+:
+10
+fill
+:
+"
+both
+"
+}
+}
 ]
 ;
 for
@@ -329,6 +417,12 @@ timeline
 animation
 .
 play
+(
+)
+;
+animation
+.
+pause
 (
 )
 ;
