Bug 1395853 - Add convenience methods regarding codec ids to sdpUtils. r=drno
MozReview-Commit-ID: J4bZhZ6gm7O

UltraBlame original commit: 807225b4dc5bfeafec2725011f4bb7dba7493c87

--- a/dom/media/tests/mochitest/test_peerConnection_scaleResolution.html
+++ b/dom/media/tests/mochitest/test_peerConnection_scaleResolution.html
@@ -139,79 +139,6 @@ msg
 )
 )
 ;
-var
-removeAllButCodec
-=
-(
-d
-codec
-)
-=
->
-(
-d
-.
-sdp
-=
-d
-.
-sdp
-.
-replace
-(
-/
-m
-=
-video
-(
-\
-w
-)
-UDP
-\
-/
-TLS
-\
-/
-RTP
-\
-/
-SAVPF
-\
-w
-.
-*
-\
-r
-\
-n
-/
-"
-m
-=
-video
-1
-UDP
-/
-TLS
-/
-RTP
-/
-SAVPF
-"
-+
-codec
-+
-"
-\
-r
-\
-n
-"
-)
-d
-)
-;
 function
 testScale
 (
@@ -337,10 +264,21 @@ VP8
 ?
 d
 :
-removeAllButCodec
 (
 d
+.
+sdp
+=
+sdputils
+.
+removeAllButPayloadType
+(
+d
+.
+sdp
 126
+)
+d
 )
 )
 )
