Bug 1357191 - 2. Fix form tests for new mobile date/time controls; r=jessica
Fix some test failures on mobile for the new date/time controls,

* Because mobile does not use the built-in reset button, tests
  involving the reset button are skipped.

* The mobile-only date/time tests in test_input_typing_sanitization.html
  do not apply to the new date/time controls, so they are removed to make
  mobile match desktop.

* test_input_sanitization.html now takes longer to run on Android and
  may time out, so the timeout limit is increased.

* time-content-left-aligned.html may fail because of different drawing
  behavior on Android, so the test is made fuzzy on Android.

MozReview-Commit-ID: EmfGf6JYdpW

UltraBlame original commit: c6ba568874b01e46deb494b75002edeb9892f9dc

--- a/dom/html/test/forms/test_input_date_bad_input.html
+++ b/dom/html/test/forms/test_input_date_bad_input.html
@@ -374,6 +374,23 @@ date
 .
 "
 ;
+const
+isDesktop
+=
+!
+/
+Mobile
+|
+Tablet
+/
+.
+test
+(
+navigator
+.
+userAgent
+)
+;
 function
 checkValidity
 (
@@ -763,6 +780,19 @@ true
 ;
 /
 /
+Reset
+button
+is
+desktop
+only
+.
+if
+(
+isDesktop
+)
+{
+/
+/
 Clearing
 all
 fields
@@ -790,6 +820,7 @@ elem
 false
 )
 ;
+}
 }
 <
 /
