--- a/dom/html/test/forms/test_input_datetime_input_change_events.html
+++ b/dom/html/test/forms/test_input_datetime_input_change_events.html
@@ -286,6 +286,23 @@ inputs
 *
 *
 /
+const
+isDesktop
+=
+!
+/
+Mobile
+|
+Tablet
+/
+.
+test
+(
+navigator
+.
+userAgent
+)
+;
 var
 inputTypes
 =
@@ -814,6 +831,19 @@ dispatched
 ;
 /
 /
+Reset
+button
+is
+desktop
+only
+.
+if
+(
+isDesktop
+)
+{
+/
+/
 Test
 that
 change
@@ -903,6 +933,7 @@ dispatched
 "
 )
 ;
+}
 }
 }
 <
