--- a/dom/base/test/test_bug1016960.html
+++ b/dom/base/test/test_bug1016960.html
@@ -175,6 +175,27 @@ ChromeWindow
 "
 )
 ;
+ok
+(
+chromeWindow
+.
+isChromeWindow
+"
+A
+chrome
+window
+should
+return
+true
+for
+|
+instanceof
+ChromeWindow
+|
+.
+"
+)
+;
 chromeWindow
 .
 close
