--- a/dom/promise/tests/test_webassembly_compile.html
+++ b/dom/promise/tests/test_webassembly_compile.html
@@ -109,108 +109,73 @@ getJSTestingFunctions
 )
 .
 wasmIsSupported
-var
-moduleStr
-=
-'
-(
+/
+/
+The
+test_webassembly_compile_sample
+.
+wasm
+is
+a
+medium
+-
+sized
 module
-\
-n
-'
-;
-for
-(
+with
+100
+/
+/
+functions
+that
+call
+each
+other
+recursively
+returning
+a
+computed
+sum
+.
+/
+/
+Any
+other
+non
+-
+trivial
+module
+could
+be
+generated
+and
+used
+.
 var
-i
-=
-0
+sampleCode
 ;
-i
-<
-50
-;
-i
-+
-+
-)
-moduleStr
-+
-=
-'
-(
-func
-(
-param
-i32
-i32
-)
-(
-result
-i32
-)
-(
-i32
-.
-add
-(
-get_local
-0
-)
-(
-get_local
-1
-)
-)
-)
-\
-n
-'
-;
-moduleStr
-+
-=
-'
-(
-func
-(
-export
-"
-foo
-"
-)
-(
-result
-i32
-)
-(
-i32
-.
 const
-42
-)
-)
-\
-n
-'
-;
-moduleStr
-+
+sampleURL
 =
 '
-)
+test_webassembly_compile_sample
+.
+wasm
 '
 ;
 const
-fooModuleCode
+sampleExportName
 =
-wasmTextToBinary
-(
-moduleStr
-)
+'
+run
+'
+;
+const
+sampleResult
+=
+1275
 ;
 function
-checkFooModule
+checkSampleModule
 (
 m
 )
@@ -259,23 +224,24 @@ ok
 i
 .
 exports
-.
-foo
+[
+sampleExportName
+]
 (
 )
 =
 =
 =
-42
+sampleResult
 "
 got
-42
+result
 "
 )
 ;
 }
 function
-checkFooInstance
+checkSampleInstance
 (
 i
 )
@@ -299,18 +265,73 @@ ok
 i
 .
 exports
-.
-foo
+[
+sampleExportName
+]
 (
 )
 =
 =
 =
-42
+sampleResult
 "
 got
-42
+result
 "
+)
+;
+}
+function
+fetchSampleModuleCode
+(
+)
+{
+fetch
+(
+sampleURL
+)
+.
+then
+(
+response
+=
+>
+response
+.
+arrayBuffer
+(
+)
+)
+.
+then
+(
+buffer
+=
+>
+{
+sampleCode
+=
+buffer
+;
+runTest
+(
+)
+}
+)
+.
+catch
+(
+err
+=
+>
+ok
+(
+false
+String
+(
+err
+)
+)
 )
 ;
 }
@@ -461,7 +482,7 @@ WebAssembly
 .
 compile
 (
-fooModuleCode
+sampleCode
 )
 .
 then
@@ -470,7 +491,7 @@ m
 =
 >
 {
-checkFooModule
+checkSampleModule
 (
 m
 )
@@ -542,7 +563,7 @@ WebAssembly
 .
 compile
 (
-fooModuleCode
+sampleCode
 )
 )
 ;
@@ -597,7 +618,7 @@ i
 +
 +
 )
-checkFooModule
+checkSampleModule
 (
 ms
 [
@@ -635,147 +656,6 @@ runTest
 ;
 }
 function
-compileInWorker
-(
-)
-{
-var
-w
-=
-new
-Worker
-(
-data
-:
-text
-/
-plain
-onmessage
-=
-e
-=
->
-{
-WebAssembly
-.
-compile
-(
-e
-.
-data
-)
-.
-then
-(
-m
-=
->
-{
-var
-i
-=
-new
-WebAssembly
-.
-Instance
-(
-m
-)
-;
-if
-(
-i
-.
-exports
-.
-foo
-(
-)
-!
-=
-=
-42
-)
-throw
-"
-bad
-i
-.
-exports
-.
-foo
-(
-)
-result
-"
-;
-postMessage
-(
-"
-ok
-"
-)
-;
-close
-(
-)
-;
-}
-)
-.
-catch
-(
-err
-=
->
-{
-throw
-err
-}
-)
-;
-}
-)
-;
-w
-.
-postMessage
-(
-fooModuleCode
-)
-;
-w
-.
-onmessage
-=
-e
-=
->
-{
-ok
-(
-e
-.
-data
-=
-=
-=
-"
-ok
-"
-"
-worker
-test
-"
-)
-;
-runTest
-(
-)
-;
-}
-}
-function
 terminateCompileInWorker
 (
 )
@@ -792,7 +672,7 @@ text
 /
 plain
 var
-fooModuleCode
+sampleCode
 ;
 function
 spawnWork
@@ -833,7 +713,7 @@ WebAssembly
 .
 compile
 (
-fooModuleCode
+sampleCode
 )
 )
 ;
@@ -856,7 +736,7 @@ e
 =
 >
 {
-fooModuleCode
+sampleCode
 =
 e
 .
@@ -880,7 +760,7 @@ w
 .
 postMessage
 (
-fooModuleCode
+sampleCode
 )
 ;
 w
@@ -990,7 +870,7 @@ WebAssembly
 .
 instantiate
 (
-fooModuleCode
+sampleCode
 )
 .
 then
@@ -999,14 +879,14 @@ r
 =
 >
 {
-checkFooModule
+checkSampleModule
 (
 r
 .
 module
 )
 ;
-checkFooInstance
+checkSampleInstance
 (
 r
 .
@@ -1050,7 +930,7 @@ WebAssembly
 .
 compile
 (
-fooModuleCode
+sampleCode
 )
 .
 then
@@ -1072,7 +952,7 @@ i
 =
 >
 {
-checkFooInstance
+checkSampleInstance
 (
 i
 )
@@ -1105,6 +985,907 @@ runTest
 )
 ;
 }
+function
+compileStreamingNonResponse
+(
+)
+{
+WebAssembly
+.
+compileStreaming
+(
+{
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
+ok
+(
+false
+)
+}
+)
+.
+catch
+(
+err
+=
+>
+{
+ok
+(
+err
+instanceof
+TypeError
+"
+rejected
+{
+}
+"
+)
+;
+runTest
+(
+)
+}
+)
+;
+}
+function
+compileStreamingNoMime
+(
+)
+{
+WebAssembly
+.
+compileStreaming
+(
+new
+Response
+(
+new
+ArrayBuffer
+(
+)
+)
+)
+.
+then
+(
+(
+)
+=
+>
+{
+ok
+(
+false
+)
+}
+)
+.
+catch
+(
+err
+=
+>
+{
+ok
+(
+err
+instanceof
+TypeError
+"
+rejected
+no
+MIME
+type
+"
+)
+;
+runTest
+(
+)
+}
+)
+;
+}
+function
+compileStreamingBadMime
+(
+)
+{
+var
+badMimes
+=
+[
+'
+'
+'
+application
+/
+js
+'
+'
+application
+/
+js
+;
+application
+/
+wasm
+'
+'
+application
+/
+wasm
+;
+application
+/
+js
+'
+'
+application
+/
+wasm
+;
+'
+'
+application
+/
+wasm1
+'
+]
+;
+var
+promises
+=
+[
+]
+;
+for
+(
+let
+mimeType
+of
+badMimes
+)
+{
+var
+init
+=
+{
+headers
+:
+{
+'
+Content
+-
+Type
+'
+:
+mimeType
+}
+}
+;
+promises
+.
+push
+(
+WebAssembly
+.
+compileStreaming
+(
+new
+Response
+(
+sampleCode
+init
+)
+)
+.
+then
+(
+(
+)
+=
+>
+Promise
+.
+reject
+(
+)
+err
+=
+>
+Promise
+.
+resolve
+(
+)
+)
+)
+;
+}
+Promise
+.
+all
+(
+promises
+)
+.
+then
+(
+(
+)
+=
+>
+{
+ok
+(
+true
+"
+all
+bad
+MIME
+types
+rejected
+"
+)
+;
+runTest
+(
+)
+}
+)
+}
+function
+compileStreamingGoodMime
+(
+)
+{
+var
+badMimes
+=
+[
+'
+application
+/
+wasm
+'
+'
+application
+/
+wasm
+'
+'
+application
+/
+wasm
+'
+]
+;
+var
+promises
+=
+[
+]
+;
+for
+(
+let
+mimeType
+of
+badMimes
+)
+{
+var
+init
+=
+{
+headers
+:
+{
+'
+Content
+-
+Type
+'
+:
+mimeType
+}
+}
+;
+promises
+.
+push
+(
+WebAssembly
+.
+compileStreaming
+(
+new
+Response
+(
+sampleCode
+init
+)
+)
+)
+;
+}
+Promise
+.
+all
+(
+promises
+)
+.
+then
+(
+(
+)
+=
+>
+{
+ok
+(
+true
+"
+all
+good
+MIME
+types
+accepted
+"
+)
+;
+runTest
+(
+)
+}
+)
+}
+function
+compileStreamingDoubleUseFail
+(
+)
+{
+fetch
+(
+sampleURL
+)
+.
+then
+(
+response
+=
+>
+{
+WebAssembly
+.
+compileStreaming
+(
+response
+)
+.
+then
+(
+m
+=
+>
+{
+checkSampleModule
+(
+m
+)
+;
+return
+WebAssembly
+.
+compileStreaming
+(
+response
+)
+}
+)
+.
+then
+(
+(
+)
+=
+>
+ok
+(
+false
+"
+should
+have
+failed
+on
+second
+use
+"
+)
+err
+=
+>
+{
+ok
+(
+true
+"
+failed
+on
+second
+use
+"
+)
+;
+runTest
+(
+)
+}
+)
+;
+}
+)
+;
+}
+function
+compileStreamingNullBody
+(
+)
+{
+var
+init
+=
+{
+headers
+:
+{
+'
+Content
+-
+Type
+'
+:
+'
+application
+/
+wasm
+'
+}
+}
+;
+WebAssembly
+.
+compileStreaming
+(
+new
+Response
+(
+undefined
+init
+)
+)
+.
+then
+(
+(
+)
+=
+>
+{
+ok
+(
+false
+)
+}
+)
+.
+catch
+(
+err
+=
+>
+{
+ok
+(
+err
+instanceof
+WebAssembly
+.
+CompileError
+"
+null
+body
+"
+)
+;
+runTest
+(
+)
+}
+)
+;
+}
+function
+compileStreamingFetch
+(
+)
+{
+WebAssembly
+.
+compileStreaming
+(
+fetch
+(
+sampleURL
+)
+)
+.
+then
+(
+m
+=
+>
+{
+checkSampleModule
+(
+m
+)
+;
+runTest
+(
+)
+;
+}
+)
+.
+catch
+(
+err
+=
+>
+{
+ok
+(
+false
+String
+(
+err
+)
+)
+}
+)
+;
+}
+function
+instantiateStreamingFetch
+(
+)
+{
+WebAssembly
+.
+instantiateStreaming
+(
+fetch
+(
+sampleURL
+)
+)
+.
+then
+(
+(
+{
+module
+instance
+}
+)
+=
+>
+{
+checkSampleModule
+(
+module
+)
+;
+checkSampleInstance
+(
+instance
+)
+;
+runTest
+(
+)
+;
+}
+)
+.
+catch
+(
+err
+=
+>
+{
+ok
+(
+false
+String
+(
+err
+)
+)
+}
+)
+;
+}
+function
+compileManyStreamingFetch
+(
+)
+{
+const
+N
+=
+20
+;
+var
+arr
+=
+[
+]
+;
+for
+(
+var
+i
+=
+0
+;
+i
+<
+N
+;
+i
++
++
+)
+arr
+.
+push
+(
+WebAssembly
+.
+compileStreaming
+(
+fetch
+(
+sampleURL
+)
+)
+)
+;
+SpecialPowers
+.
+gc
+(
+)
+;
+Promise
+.
+all
+(
+arr
+)
+.
+then
+(
+ms
+=
+>
+{
+ok
+(
+ms
+.
+length
+=
+=
+=
+N
+"
+got
+the
+right
+number
+"
+)
+;
+for
+(
+var
+i
+=
+0
+;
+i
+<
+N
+;
+i
++
++
+)
+checkSampleModule
+(
+ms
+[
+i
+]
+)
+;
+runTest
+(
+)
+;
+}
+)
+.
+catch
+(
+err
+=
+>
+{
+ok
+(
+false
+String
+(
+err
+)
+)
+;
+runTest
+(
+)
+}
+)
+;
+}
+function
+runWorkerTests
+(
+)
+{
+var
+w
+=
+new
+Worker
+(
+'
+test_webassembly_compile_worker
+.
+js
+'
+)
+;
+w
+.
+postMessage
+(
+sampleCode
+)
+;
+w
+.
+onmessage
+=
+e
+=
+>
+{
+ok
+(
+e
+.
+data
+=
+=
+=
+"
+ok
+"
+"
+worker
+test
+:
+"
++
+e
+.
+data
+)
+;
+runTest
+(
+)
+;
+}
+}
+function
+terminateCompileStreamingInWorker
+(
+)
+{
+var
+w
+=
+new
+Worker
+(
+'
+test_webassembly_compile_worker_terminate
+.
+js
+'
+)
+;
+w
+.
+onmessage
+=
+e
+=
+>
+{
+ok
+(
+e
+.
+data
+=
+=
+=
+"
+ok
+"
+"
+worker
+streaming
+terminate
+test
+:
+"
++
+e
+.
+data
+)
+;
+w
+.
+terminate
+(
+)
+;
+runTest
+(
+)
+;
+}
+}
 var
 tests
 =
@@ -1113,12 +1894,36 @@ propertiesExist
 compileFail
 compileSuccess
 compileManySuccess
-compileInWorker
 terminateCompileInWorker
 instantiateFail
 instantiateSuccess
 chainSuccess
+compileStreamingNonResponse
+compileStreamingNoMime
+compileStreamingBadMime
+compileStreamingGoodMime
+compileStreamingDoubleUseFail
+compileStreamingNullBody
+compileStreamingFetch
+instantiateStreamingFetch
+compileManyStreamingFetch
+runWorkerTests
+terminateCompileStreamingInWorker
 ]
+;
+/
+/
+This
+initialization
+must
+always
+run
+tests
+.
+unshift
+(
+fetchSampleModuleCode
+)
 ;
 function
 runTest
