Bug 1406783 - texts for radio options to select ping data on about:telemetry should select option after clicked. r=gfritzsche
MozReview-Commit-ID: AmJM953FIBT

UltraBlame original commit: fc96bf1b72ce632c2a010882393cc64b39253bd9

--- a/toolkit/content/aboutTelemetry.xhtml
+++ b/toolkit/content/aboutTelemetry.xhtml
@@ -1260,11 +1260,27 @@ checked
 "
 /
 >
+<
+label
+for
+=
+"
+ping
+-
+source
+-
+current
+"
+>
 &
 aboutTelemetry
 .
 showCurrentPingData
 ;
+<
+/
+label
+>
 <
 /
 div
@@ -1315,11 +1331,27 @@ archive
 "
 /
 >
+<
+label
+for
+=
+"
+ping
+-
+source
+-
+archive
+"
+>
 &
 aboutTelemetry
 .
 showArchivedPingData
 ;
+<
+/
+label
+>
 <
 /
 div
