Bug 1406456 - WebAuthn WebIDL Updates for WD-07 (part 1) r=keeler,qdot
This covers these renames:
* In PublicKeyCredentialParameters, algorithm => alg
* MakeCredentialOptions => MakePublicKeyCredentialOptions
* PublicKeyCredentialEntity => PublicKeyCredentialRpEntity
* Attachment => AuthenticatorAttachment

It sets a default excludeList and allowList for the make / get options.

It adds the method isPlatformAuthenticatorAvailable which is incomplete and
not callable, to be completed in Bug 1406468.

Adds type PublicKeyCredentialRpEntity.

Adds "userId" to AuthenticatorAssertionResponse.

Adds "id" as a buffer source to PublicKeyCredentialUserEntity and as a
DOMString to PublicKeyCredentialRpEntity, refactoring out the "id" field
from the parent PublicKeyCredentialEntity.

It also adds a simple enforcement per spec 4.4.3 "User Account Parameters for
Credential Generation" that the new user ID buffer, if set, be no more than
64 bytes long. I mostly added it here so I could adjust the tests all at once
in this commit.

MozReview-Commit-ID: IHUdGVoWocq

UltraBlame original commit: ca60b3cab4ed50a6f4c06ac0bb9498aaedd9551b

--- a/dom/webauthn/tests/browser/tab_webauthn_success.html
+++ b/dom/webauthn/tests/browser/tab_webauthn_success.html
@@ -431,9 +431,10 @@ user
 {
 id
 :
-"
-none
-"
+new
+Uint8Array
+(
+)
 name
 :
 "
@@ -476,7 +477,7 @@ public
 -
 key
 "
-algorithm
+alg
 :
 "
 ES256
@@ -532,6 +533,14 @@ testAssertion
 aCredInfo
 )
 {
+gState
+.
+authDataObj
+=
+aCredInfo
+.
+authDataObj
+;
 gState
 .
 publicKeyHandle
@@ -603,83 +612,6 @@ newCredential
 ]
 }
 ;
-return
-navigator
-.
-credentials
-.
-get
-(
-{
-publicKey
-:
-publicKeyCredentialRequestOptions
-}
-)
-;
-}
-)
-.
-then
-(
-function
-(
-aAssertion
-)
-{
-let
-clientData
-=
-JSON
-.
-parse
-(
-buffer2string
-(
-aAssertion
-.
-response
-.
-clientDataJSON
-)
-)
-;
-gState
-.
-assertion
-=
-aAssertion
-;
-return
-webAuthnDecodeAuthDataArray
-(
-new
-Uint8Array
-(
-aAssertion
-.
-response
-.
-authenticatorData
-)
-)
-;
-}
-)
-.
-then
-(
-function
-(
-aAttestationObj
-)
-{
-gState
-.
-attestation
-=
-aAttestationObj
-;
 /
 /
 Make
@@ -740,7 +672,7 @@ bytesToBase64UrlSafe
 new
 Uint8Array
 (
-aAttestationObj
+gState
 .
 authDataObj
 .
@@ -778,14 +710,67 @@ derived
 ;
 }
 return
-Promise
+navigator
 .
-resolve
+credentials
+.
+get
 (
-aAttestationObj
+{
+publicKey
+:
+publicKeyCredentialRequestOptions
+}
 )
 ;
 }
+)
+;
+}
+)
+.
+then
+(
+function
+(
+aAssertion
+)
+{
+let
+clientData
+=
+JSON
+.
+parse
+(
+buffer2string
+(
+aAssertion
+.
+response
+.
+clientDataJSON
+)
+)
+;
+gState
+.
+assertion
+=
+aAssertion
+;
+return
+webAuthnDecodeAuthDataArray
+(
+new
+Uint8Array
+(
+aAssertion
+.
+response
+.
+authenticatorData
+)
 )
 ;
 }
@@ -923,11 +908,7 @@ gState
 .
 publicKeyHandle
 aSignedData
-new
-Uint8Array
-(
 signature
-)
 )
 ;
 }
