--- a/dom/webauthn/tests/test_webauthn_loopback.html
+++ b/dom/webauthn/tests/test_webauthn_loopback.html
@@ -1149,6 +1149,22 @@ SameObject
 "
 )
 ;
+isnot
+(
+aAssertion
+.
+response
+.
+userId
+undefined
+"
+AuthenticatorAssertionResponse
+.
+UserId
+is
+defined
+"
+)
 ok
 (
 aAssertion
@@ -1449,11 +1465,6 @@ let
 user
 =
 {
-id
-:
-"
-none
-"
 name
 :
 "
@@ -1482,7 +1493,7 @@ public
 -
 key
 "
-algorithm
+alg
 :
 "
 ES256
@@ -1584,11 +1595,6 @@ let
 user
 =
 {
-id
-:
-"
-none
-"
 name
 :
 "
@@ -1617,7 +1623,7 @@ public
 -
 key
 "
-algorithm
+alg
 :
 "
 ES256
