--- a/dom/webauthn/tests/test_webauthn_make_credential.html
+++ b/dom/webauthn/tests/test_webauthn_make_credential.html
@@ -621,9 +621,11 @@ user
 {
 id
 :
-"
-none
-"
+new
+Uint8Array
+(
+64
+)
 name
 :
 "
@@ -652,7 +654,7 @@ public
 -
 key
 "
-algorithm
+alg
 :
 "
 es256
@@ -670,7 +672,7 @@ public
 -
 key
 "
-algorithm
+alg
 :
 "
 3DES
@@ -686,7 +688,7 @@ type
 "
 SimplePassword
 "
-algorithm
+alg
 :
 "
 MaxLength
@@ -1427,6 +1429,77 @@ expectTypeError
 /
 Test
 with
+incorrect
+user
+ID
+type
+function
+(
+)
+{
+let
+invalidType
+=
+user
+;
+invalidType
+.
+id
+=
+"
+a
+string
+which
+is
+not
+a
+buffer
+"
+;
+let
+makeCredentialOptions
+=
+{
+user
+:
+invalidType
+challenge
+:
+gCredentialChallenge
+parameters
+:
+[
+param
+]
+}
+;
+return
+credm
+.
+create
+(
+{
+publicKey
+:
+makeCredentialOptions
+}
+)
+.
+then
+(
+arrivingHereIsBad
+)
+.
+catch
+(
+expectTypeError
+)
+;
+}
+/
+/
+Test
+with
 missing
 user
 function
@@ -1521,12 +1594,15 @@ completeUser
 {
 id
 :
+string2buffer
+(
 "
 foxes_are_the_best
 example
 .
 com
 "
+)
 name
 :
 "
@@ -1598,6 +1674,105 @@ arrivingHereIsGood
 catch
 (
 arrivingHereIsBad
+)
+;
+}
+/
+/
+Test
+with
+too
+-
+large
+user
+ID
+buffer
+function
+(
+)
+{
+let
+hugeUser
+=
+{
+id
+:
+new
+Uint8Array
+(
+65
+)
+name
+:
+"
+Fox
+F
+.
+Foxington
+"
+icon
+:
+"
+https
+:
+/
+/
+example
+.
+com
+/
+fox
+.
+svg
+"
+displayName
+:
+"
+Foxxy
+V
+"
+}
+;
+let
+makeCredentialOptions
+=
+{
+rp
+:
+rp
+user
+:
+hugeUser
+challenge
+:
+gCredentialChallenge
+parameters
+:
+[
+param
+]
+}
+;
+return
+credm
+.
+create
+(
+{
+publicKey
+:
+makeCredentialOptions
+}
+)
+.
+then
+(
+arrivingHereIsBad
+)
+.
+catch
+(
+expectTypeError
 )
 ;
 }
