--- a/dom/webauthn/tests/test_webauthn_sameorigin.html
+++ b/dom/webauthn/tests/test_webauthn_sameorigin.html
@@ -544,9 +544,11 @@ user
 {
 id
 :
-"
-none
-"
+new
+Uint8Array
+(
+16
+)
 name
 :
 "
@@ -575,7 +577,7 @@ public
 -
 key
 "
-algorithm
+alg
 :
 "
 Es256
