Bug 1406456 - WebAuthn WebIDL Updates for WD-07 (part 2) r=qdot,ttaubert
This covers these renames:

* In CollectedClientData, hashAlg => hashAlgorithm
* In CollectedClientData, tokenBinding => tokenBindingId
* In MakePublicKeyCredentialOptions, parameters => pubKeyCredParams
* In MakePublicKeyCredentialOptions, excludeList => excludeCredentials
* In PublicKeyCredentialRequestOptions, allowList => allowCredentials
* Transport (WebAuthnTransport in Gecko) => AuthenticatorTransport

MozReview-Commit-ID: 3FdRnkosy83

UltraBlame original commit: dd5ff0119c3f20f9b887c23774890e64d15a7f28

--- a/dom/webauthn/tests/test_webauthn_get_assertion.html
+++ b/dom/webauthn/tests/test_webauthn_get_assertion.html
@@ -718,7 +718,7 @@ publicKeyCredentialRequestOptions
 challenge
 :
 gAssertionChallenge
-allowList
+allowCredentials
 :
 [
 invalidCred
@@ -766,7 +766,7 @@ publicKeyCredentialRequestOptions
 challenge
 :
 gAssertionChallenge
-allowList
+allowCredentials
 :
 [
 unknownCred
@@ -823,7 +823,7 @@ unknownValue
 "
 hi
 "
-allowList
+allowCredentials
 :
 [
 invalidCred
