--- a/dom/webauthn/tests/test_webauthn_make_credential.html
+++ b/dom/webauthn/tests/test_webauthn_make_credential.html
@@ -724,7 +724,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -770,7 +770,7 @@ makeCredentialOptions
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -823,7 +823,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 ]
@@ -927,7 +927,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 unsupportedParam
@@ -985,7 +985,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1040,7 +1040,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 badParam
@@ -1098,7 +1098,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 unsupportedParam
@@ -1175,7 +1175,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1227,7 +1227,7 @@ rp
 user
 :
 user
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1290,7 +1290,7 @@ moist
 glove
 !
 "
-parameters
+pubKeyCredParams
 :
 [
 unsupportedParam
@@ -1325,7 +1325,7 @@ expectTypeError
 Test
 with
 duplicate
-parameters
+pubKeyCredParams
 function
 (
 )
@@ -1343,7 +1343,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1395,7 +1395,7 @@ user
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1466,7 +1466,7 @@ invalidType
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1516,7 +1516,7 @@ rp
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1647,7 +1647,7 @@ completeUser
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1746,7 +1746,7 @@ hugeUser
 challenge
 :
 gCredentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
