--- a/dom/webauthn/tests/test_webauthn_no_token.html
+++ b/dom/webauthn/tests/test_webauthn_no_token.html
@@ -563,7 +563,7 @@ user
 challenge
 :
 credentialChallenge
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -689,7 +689,7 @@ rpId
 document
 .
 domain
-allowList
+allowCredentials
 :
 [
 newCredential
