--- a/dom/webauthn/tests/test_webauthn_sameorigin.html
+++ b/dom/webauthn/tests/test_webauthn_sameorigin.html
@@ -622,7 +622,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -688,7 +688,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -765,7 +765,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -829,7 +829,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -899,7 +899,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -965,7 +965,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1028,7 +1028,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1098,7 +1098,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1150,7 +1150,7 @@ rpId
 document
 .
 domain
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1202,7 +1202,7 @@ publicKeyCredentialRequestOptions
 challenge
 :
 chall
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1272,7 +1272,7 @@ origin
 :
 8888
 "
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1327,7 +1327,7 @@ rpId
 :
 "
 "
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1390,7 +1390,7 @@ subdomain
 document
 .
 domain
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1449,7 +1449,7 @@ example
 .
 com
 "
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1505,7 +1505,7 @@ rpId
 "
 com
 "
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1568,7 +1568,7 @@ alt
 .
 test
 "
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
@@ -1646,7 +1646,7 @@ user
 challenge
 :
 chall
-parameters
+pubKeyCredParams
 :
 [
 param
@@ -1707,7 +1707,7 @@ rpId
 window
 .
 origin
-allowList
+allowCredentials
 :
 [
 gTrackedCredential
