--- a/dom/webauthn/tests/browser/tab_webauthn_success.html
+++ b/dom/webauthn/tests/browser/tab_webauthn_success.html
@@ -466,7 +466,7 @@ is
 actually
 15
 seconds
-parameters
+pubKeyCredParams
 :
 [
 {
@@ -605,7 +605,7 @@ rpId
 document
 .
 domain
-allowList
+allowCredentials
 :
 [
 newCredential
