Bug 1405761 - If the preload pref is disabled rel=preload should be shown as not supported. r=smaug
UltraBlame original commit: 1f4d35d137631cde34f318fac0c33421d5360dc3

--- a/dom/base/test/test_bug1222633.html
+++ b/dom/base/test/test_bug1222633.html
@@ -753,11 +753,39 @@ waitForExplicitFinish
 (
 )
 ;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+network
+.
+preload
+"
+true
+]
+]
+}
+)
 /
 /
 test
 same
 origin
+.
+then
+(
+(
+)
+=
+>
 testPreloadEvent
 (
 SAME_ORIGIN
@@ -776,6 +804,7 @@ cache
 "
 false
 false
+)
 )
 .
 then
