--- a/dom/base/test/test_bug1222633_link_update.html
+++ b/dom/base/test/test_bug1222633_link_update.html
@@ -1005,6 +1005,27 @@ waitForExplicitFinish
 (
 )
 ;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+network
+.
+preload
+"
+true
+]
+]
+}
+)
 /
 /
 Test
@@ -1019,6 +1040,13 @@ a
 correct
 one
 .
+.
+then
+(
+(
+)
+=
+>
 testPreloadEventAsAttributeChange
 (
 SAME_ORIGIN
@@ -1037,6 +1065,7 @@ age
 %
 3D120
 "
+)
 )
 /
 /
