Bug 1405070 - Add a DAMP test for console shutdown after expanding a large object; r=bgrins.
MozReview-Commit-ID: CQp3V4GIJzP

UltraBlame original commit: 3df81d9d83379b1fc7b45151ac33e35ea36c9bc7

--- a/testing/talos/talos/tests/devtools/addon/content/damp.html
+++ b/testing/talos/talos/tests/devtools/addon/content/damp.html
@@ -105,6 +105,9 @@ true
 consoleStreamLogging
 :
 true
+consoleObjectExpansion
+:
+true
 }
 }
 ;
@@ -236,6 +239,21 @@ console
 .
 log
 statements
+"
+consoleObjectExpansion
+:
+"
+Measure
+time
+to
+expand
+a
+large
+object
+and
+close
+the
+console
 "
 }
 ;
