Bug 1406381 - Tidy up simple-iteration-progress.html and current-iteration.html somewhat; r=hiro
This is in preparation for further changes to these files later in this patch
series.

In particular this patch:

* Moves some code to more modern Javascript that should be easier to read and
  maintain

* Makes the tests more strict about when active/after values are specified
  - If the timing parameters mean there is no active phase, the test should not
    specify a value to test for that phase. If there *is* an active phase, the
    test must provide a value to test (if it does not the test will fails when
    it compares against the undefined value).
  - Likewise for the after phase
  This should make it a little easier to incorporate testing the playbackRate.

MozReview-Commit-ID: 17vihK5RSbu

UltraBlame original commit: 05bea37339089f59a50640d966394b56705107fc

--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
@@ -138,59 +138,58 @@ tests
 description
 )
 {
-tests
-.
-forEach
-(
-function
-(
-currentTest
-)
-{
-var
-testParams
-=
-'
-'
-;
 for
 (
-var
-attr
-in
+const
+currentTest
+of
+tests
+)
+{
+const
+testParams
+=
+Object
+.
+entries
+(
 currentTest
 .
 input
 )
-{
-testParams
-+
-=
-'
-'
-+
-attr
-+
-'
-:
-'
-+
-currentTest
 .
-input
+map
+(
+(
 [
 attr
+value
 ]
-;
+)
+=
+>
+{
+attr
 }
+:
+{
+value
+}
+)
+.
+join
+(
+'
+'
+)
+;
 test
 (
-function
-(
 t
-)
+=
+>
 {
-var
+const
 div
 =
 createDiv
@@ -198,7 +197,7 @@ createDiv
 t
 )
 ;
-var
+const
 anim
 =
 div
@@ -206,18 +205,16 @@ div
 animate
 (
 {
-opacity
-:
-[
-0
-1
-]
 }
 currentTest
 .
 input
 )
 ;
+/
+/
+Before
+phase
 assert_equals
 (
 anim
@@ -234,6 +231,25 @@ currentTest
 before
 )
 ;
+/
+/
+Active
+phase
+if
+(
+anim
+.
+effect
+.
+getComputedTiming
+(
+)
+.
+activeDuration
+>
+0
+)
+{
 anim
 .
 currentTime
@@ -263,18 +279,62 @@ currentTest
 active
 )
 ;
+}
+else
 if
 (
-typeof
 currentTest
 .
-after
+active
 !
 =
 =
-'
 undefined
+)
+{
+assert_false
+(
 '
+Test
+specifies
+an
+active
+progress
+to
+check
+but
+the
+'
++
+'
+animation
+has
+a
+zero
+duration
+'
+)
+;
+}
+/
+/
+After
+phase
+if
+(
+anim
+.
+effect
+.
+getComputedTiming
+(
+)
+.
+activeDuration
+!
+=
+=
+Infinity
 )
 {
 anim
@@ -300,19 +360,54 @@ after
 )
 ;
 }
+else
+if
+(
+currentTest
+.
+after
+!
+=
+=
+undefined
+)
+{
+assert_false
+(
+'
+Test
+specifies
+an
+after
+phase
+progress
+to
+check
+but
+the
+'
++
+'
+animation
+has
+an
+infinite
+duration
+'
+)
+;
 }
+}
+{
 description
-+
-'
+}
 :
-'
-+
+{
 testParams
-)
-;
 }
 )
 ;
+}
 }
 /
 /
@@ -492,9 +587,6 @@ both
 before
 :
 0
-active
-:
-0
 after
 :
 0
@@ -522,9 +614,6 @@ both
 '
 }
 before
-:
-0
-active
 :
 0
 after
@@ -556,9 +645,6 @@ both
 before
 :
 0
-active
-:
-0
 after
 :
 0
@@ -588,11 +674,6 @@ both
 '
 }
 before
-:
-0
-.
-5
-active
 :
 0
 .
@@ -632,11 +713,6 @@ before
 0
 .
 5
-active
-:
-0
-.
-5
 after
 :
 0
@@ -672,11 +748,6 @@ before
 0
 .
 5
-active
-:
-0
-.
-5
 after
 :
 0
@@ -706,9 +777,6 @@ both
 '
 }
 before
-:
-0
-active
 :
 0
 after
@@ -740,9 +808,6 @@ both
 before
 :
 0
-active
-:
-0
 after
 :
 0
@@ -770,9 +835,6 @@ both
 '
 }
 before
-:
-0
-active
 :
 0
 after
@@ -969,9 +1031,6 @@ both
 before
 :
 0
-active
-:
-1
 after
 :
 1
@@ -1066,11 +1125,6 @@ before
 0
 .
 5
-active
-:
-0
-.
-5
 after
 :
 0
@@ -1177,9 +1231,6 @@ both
 before
 :
 0
-active
-:
-1
 after
 :
 1
@@ -1437,11 +1488,6 @@ both
 before
 :
 0
-active
-:
-0
-.
-5
 after
 :
 0
@@ -1546,9 +1592,6 @@ before
 0
 .
 5
-active
-:
-1
 after
 :
 1
@@ -1657,11 +1700,6 @@ both
 before
 :
 0
-active
-:
-0
-.
-5
 after
 :
 0
@@ -1924,9 +1962,6 @@ both
 before
 :
 0
-active
-:
-1
 after
 :
 1
@@ -2014,11 +2049,6 @@ both
 '
 }
 before
-:
-0
-.
-5
-active
 :
 0
 .
@@ -2124,9 +2154,6 @@ both
 before
 :
 0
-active
-:
-1
 after
 :
 1
