--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/current-iteration.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/current-iteration.html
@@ -135,59 +135,58 @@ tests
 description
 )
 {
-tests
-.
-forEach
-(
-function
-(
-currentTest
-)
-{
-var
-testParams
-=
-'
-'
-;
 for
 (
-var
-attr
-in
+const
+currentTest
+of
+tests
+)
+{
+const
+testParams
+=
+Object
+.
+entries
+(
 currentTest
 .
 input
 )
-{
-testParams
-+
-=
-'
-'
-+
-attr
-+
-'
-:
-'
-+
-currentTest
 .
-input
+map
+(
+(
 [
 attr
+value
 ]
-;
+)
+=
+>
+{
+attr
 }
+:
+{
+value
+}
+)
+.
+join
+(
+'
+'
+)
+;
 test
 (
-function
-(
 t
-)
+=
+>
 {
-var
+const
 div
 =
 createDiv
@@ -195,7 +194,7 @@ createDiv
 t
 )
 ;
-var
+const
 anim
 =
 div
@@ -203,18 +202,16 @@ div
 animate
 (
 {
-opacity
-:
-[
-0
-1
-]
 }
 currentTest
 .
 input
 )
 ;
+/
+/
+Before
+phase
 assert_equals
 (
 anim
@@ -231,6 +228,25 @@ currentTest
 before
 )
 ;
+/
+/
+Active
+phase
+if
+(
+anim
+.
+effect
+.
+getComputedTiming
+(
+)
+.
+activeDuration
+>
+0
+)
+{
 anim
 .
 currentTime
@@ -260,18 +276,63 @@ currentTest
 active
 )
 ;
+}
+else
 if
 (
-typeof
 currentTest
 .
-after
+active
 !
 =
 =
-'
 undefined
+)
+{
+assert_false
+(
 '
+Test
+specifies
+an
+active
+phase
+iteration
+to
+check
+but
+the
+'
++
+'
+animation
+has
+a
+zero
+duration
+'
+)
+;
+}
+/
+/
+After
+phase
+if
+(
+anim
+.
+effect
+.
+getComputedTiming
+(
+)
+.
+activeDuration
+!
+=
+=
+Infinity
 )
 {
 anim
@@ -297,19 +358,54 @@ after
 )
 ;
 }
+else
+if
+(
+currentTest
+.
+after
+!
+=
+=
+undefined
+)
+{
+assert_false
+(
+'
+Test
+specifies
+an
+after
+phase
+iteration
+to
+check
+but
+the
+'
++
+'
+animation
+has
+an
+infinite
+duration
+'
+)
+;
 }
+}
+{
 description
-+
-'
+}
 :
-'
-+
+{
 testParams
-)
-;
 }
 )
 ;
+}
 }
 async_test
 (
@@ -594,9 +690,6 @@ both
 before
 :
 0
-active
-:
-0
 after
 :
 0
@@ -626,9 +719,6 @@ both
 before
 :
 0
-active
-:
-0
 after
 :
 0
@@ -656,9 +746,6 @@ both
 '
 }
 before
-:
-0
-active
 :
 0
 after
@@ -692,9 +779,6 @@ both
 before
 :
 2
-active
-:
-2
 after
 :
 2
@@ -724,9 +808,6 @@ both
 '
 }
 before
-:
-2
-active
 :
 2
 after
@@ -760,9 +841,6 @@ both
 before
 :
 2
-active
-:
-2
 after
 :
 2
@@ -790,9 +868,6 @@ both
 '
 }
 before
-:
-3
-active
 :
 3
 after
@@ -824,9 +899,6 @@ both
 before
 :
 3
-active
-:
-3
 after
 :
 3
@@ -854,9 +926,6 @@ both
 '
 }
 before
-:
-3
-active
 :
 3
 after
@@ -1053,9 +1122,6 @@ both
 before
 :
 0
-active
-:
-2
 after
 :
 2
@@ -1148,9 +1214,6 @@ both
 before
 :
 2
-active
-:
-5
 after
 :
 5
@@ -1245,9 +1308,6 @@ both
 before
 :
 3
-active
-:
-5
 after
 :
 5
@@ -1505,9 +1565,6 @@ both
 before
 :
 0
-active
-:
-3
 after
 :
 3
@@ -1606,9 +1663,6 @@ both
 before
 :
 2
-active
-:
-5
 after
 :
 5
@@ -1709,9 +1763,6 @@ both
 before
 :
 3
-active
-:
-6
 after
 :
 6
@@ -1970,9 +2021,6 @@ both
 before
 :
 0
-active
-:
-Infinity
 after
 :
 Infinity
@@ -2062,9 +2110,6 @@ both
 before
 :
 2
-active
-:
-Infinity
 after
 :
 Infinity
@@ -2156,9 +2201,6 @@ both
 before
 :
 3
-active
-:
-Infinity
 after
 :
 Infinity
